Add GUI with javaFX